--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -114,13 +114,10 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  position: relative;
 }
 
 .mainUnit .tasksMain .modal {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -143,7 +140,6 @@ body {
   margin-bottom: 30px;
   -webkit-transition: 2s linear;
   transition: 2s linear;
-  opacity: 0;
 }
 
 .mainUnit .tasksMain .modal .modalTask {
@@ -492,6 +488,7 @@ body {
   background: rgba(41, 161, 156, 0.02);
   border: 1px solid rgba(40, 40, 70, 0.1);
   border-radius: 10px;
+  cursor: pointer;
 }
 
 .mainUnit .tasks .activeTasks .checkСontainer .check {
@@ -505,6 +502,7 @@ body {
 }
 
 .mainUnit .tasks .activeTasks .checkСontainer .check .checkbox {
+  display: none;
   width: 20px;
   height: 20px;
   border: 1px solid #29a19c;
@@ -536,6 +534,7 @@ body {
 }
 
 .mainUnit .tasks .activeTasks .checkСontainer .removal .removalImg {
+  display: none;
   width: 18px;
   height: 18px;
 }
@@ -661,13 +660,20 @@ body {
 }
 
 .modalStyle {
-  display: none;
   position: absolute;
-  width: 99%;
+  width: 0;
   height: 99%;
   z-index: 2;
   opacity: 0.8;
-  -webkit-transition: 2s linear;
-  transition: 2s linear;
+  -webkit-transition: 0.8s linear;
+  transition: 0.8s linear;
+}
+
+#checkСontainer {
+  min-height: 200px;
+}
+
+.removNone {
+  display: block;
 }
 /*# sourceMappingURL=mainPage.css.map */
