--- a/css/mainPage.scss
+++ b/css/mainPage.scss
@@ -118,70 +118,87 @@ body {
     .tasksMain {
         display: flex;
         justify-content: space-between;
+    }
+    .modal {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        position: absolute;
+        left: 50%;
+        margin-left: -350px;
+        top: 50%;
+        margin-top: -175px;
+        z-index: 5;
+        width: 700px;
+        height: 350px;
+        background: #ffffff;
+        box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+        border-radius: 10px;
+        margin-bottom: 30px;
+        transition: 2s linear;
 
-        .modal {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            position: absolute;
-            left: 50%;
-            margin-left: -350px;
-            top: 50%;
-            margin-top: -175px;
-            z-index: 5;
-            width: 700px;
-            height: 350px;
-            background: #ffffff;
-            box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
-            border-radius: 10px;
-            margin-bottom: 30px;
-            transition: 2s linear;
-
-            .modalTask {
-                display: flex;
-                width: 660px;
-                height: 28px;
-                margin: 20px 0px 30px 0px;
-                .modalH1 {
-                    font-family: "Nunito";
-                    font-style: normal;
-                    font-weight: 700;
-                    font-size: 20px;
-                    line-height: 27px;
-                    letter-spacing: 0.02em;
-                    color: #29a19c;
-                    margin: 0;
-                }
-                .modalSelect {
-                    width: 151px;
-                    height: 28px;
-                    border: 1px solid rgba(40, 40, 70, 0.2);
-                    box-sizing: border-box;
-                    border-radius: 6px;
-                    margin-left: 20px;
-                    font-family: "Nunito";
-                    font-style: normal;
-                    font-weight: 400;
-                    font-size: 14px;
-                    line-height: 19px;
-                    color: #000000;
-                    opacity: 0.5;
-                }
+        .modalTask {
+            display: flex;
+            width: 660px;
+            height: 28px;
+            margin: 20px 0px 30px 0px;
+            .modalH1 {
+                font-family: "Nunito";
+                font-style: normal;
+                font-weight: 700;
+                font-size: 20px;
+                line-height: 27px;
+                letter-spacing: 0.02em;
+                color: #29a19c;
+                margin: 0;
             }
-            .addModalTask {
+            .modalSelect {
+                width: 151px;
+                height: 28px;
+                border: 1px solid rgba(40, 40, 70, 0.2);
+                box-sizing: border-box;
+                border-radius: 6px;
+                margin-left: 20px;
+                font-family: "Nunito";
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 19px;
+                color: #000000;
+                opacity: 0.5;
+            }
+        }
+        .addModalTask {
+            width: 660px;
+            height: 66px;
+            margin-bottom: 30px;
+            .addModalTaskH2 {
+                font-family: "Nunito";
+                font-style: normal;
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 19px;
+                color: #282846;
+            }
+            .addModalTaskInput {
                 width: 660px;
-                height: 66px;
-                margin-bottom: 30px;
-                .addModalTaskH2 {
-                    font-family: "Nunito";
-                    font-style: normal;
-                    font-weight: 700;
-                    font-size: 14px;
-                    line-height: 19px;
-                    color: #282846;
-                }
+                height: 35px;
+                border: 1px solid rgba(40, 40, 70, 0.1);
+                box-sizing: border-box;
+                border-radius: 8px;
+                font-family: "Nunito";
+                font-style: normal;
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 19px;
+                color: #000000;
+                padding-left: 20px;
+            }
+            .addModalTaskСategory {
+                width: 200px;
+                height: 64px;
                 .addModalTaskInput {
-                    width: 660px;
+                    width: 200px;
                     height: 35px;
                     border: 1px solid rgba(40, 40, 70, 0.1);
                     box-sizing: border-box;
@@ -192,88 +209,71 @@ body {
                     font-size: 14px;
                     line-height: 19px;
                     color: #000000;
-                    padding-left: 20px;
-                }
-                .addModalTaskСategory {
-                    width: 200px;
-                    height: 64px;
-                    .addModalTaskInput {
-                        width: 200px;
-                        height: 35px;
-                        border: 1px solid rgba(40, 40, 70, 0.1);
-                        box-sizing: border-box;
-                        border-radius: 8px;
-                        font-family: "Nunito";
-                        font-style: normal;
-                        font-weight: 400;
-                        font-size: 14px;
-                        line-height: 19px;
-                        color: #000000;
-                        opacity: 0.5;
-                    }
+                    opacity: 0.5;
                 }
             }
-            .addModalTaskButton {
-                width: 660px;
-                height: 64px;
-                position: relative;
-                .Cancel {
-                    background: #f05454;
-                    border-radius: 8px;
-                    padding: 10px 25px;
-                    border: none;
-                    font-family: "Nunito";
-                    font-style: normal;
-                    font-weight: 600;
-                    font-size: 16px;
-                    line-height: 22px;
-                    color: #fafafa;
-                    position: absolute;
-                    top: 34%;
-                    cursor: pointer;
-                }
-                .Save {
-                    font-family: "Nunito";
-                    font-style: normal;
-                    font-weight: 600;
-                    font-size: 16px;
-                    line-height: 22px;
-                    color: #29a19c;
-                    border: 1px solid #29a19c;
-                    box-sizing: border-box;
-                    border-radius: 8px;
-                    padding: 10px 25px;
-                    position: absolute;
-                    top: 32%;
-                    left: 44%;
-                    cursor: pointer;
-                }
-            }
-            .Add {
-                background: #29a19c;
+        }
+        .addModalTaskButton {
+            width: 660px;
+            height: 64px;
+            position: relative;
+            .Cancel {
+                background: #f05454;
                 border-radius: 8px;
                 padding: 10px 25px;
+                border: none;
                 font-family: "Nunito";
                 font-style: normal;
                 font-weight: 600;
                 font-size: 16px;
                 line-height: 22px;
                 color: #fafafa;
-                border: none;
                 position: absolute;
-                top: 36%;
-                left: 81%;
+                top: 34%;
+                cursor: pointer;
+            }
+            .Save {
+                font-family: "Nunito";
+                font-style: normal;
+                font-weight: 600;
+                font-size: 16px;
+                line-height: 22px;
+                color: #29a19c;
+                border: 1px solid #29a19c;
+                box-sizing: border-box;
+                border-radius: 8px;
+                padding: 10px 25px;
+                position: absolute;
+                top: 32%;
+                left: 44%;
                 cursor: pointer;
             }
         }
-        .addModalTaskDisplay {
-            display: flex;
-            justify-content: space-between;
-        }
-        .modalNextClass {
-            border: 3px solid white;
+        .Add {
+            background: #29a19c;
+            border-radius: 8px;
+            padding: 10px 25px;
+            font-family: "Nunito";
+            font-style: normal;
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 22px;
+            color: #fafafa;
+            border: none;
+            position: absolute;
+            top: 36%;
+            left: 81%;
+            cursor: pointer;
         }
     }
+    .addModalTaskDisplay {
+        display: flex;
+        justify-content: space-between;
+    }
+    .modalNextClass {
+        border: 3px solid white;
+    }
+
     .tasks {
         max-width: 566px;
         width: 100%;
@@ -368,7 +368,7 @@ body {
                 width: 100%;
                 height: 50px;
                 margin: 10px 0;
-                background: rgba(41, 161, 156, 0.02);
+                background: rgba(155 233 230 / 85%);
                 border: 1px solid rgba(40, 40, 70, 0.1);
                 border-radius: 10px;
                 cursor: pointer;
