--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -5,8 +5,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-transition: 2s linear;
   transition: 2s linear;
 }
@@ -24,11 +24,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   max-width: 1068px;
   width: 100%;
   height: 44px;
@@ -41,11 +41,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   border-radius: 8px;
   width: 186px;
   height: 42px;
@@ -79,11 +79,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 294px;
   height: 44px;
 }
@@ -112,19 +112,19 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .mainUnit .modal {
   display: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   position: absolute;
   left: 50%;
   margin-left: -350px;
@@ -135,7 +135,7 @@ body {
   height: 350px;
   background: #ffffff;
   -webkit-box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
-          box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+  box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
   border-radius: 10px;
   margin-bottom: 30px;
   -webkit-transition: 2s linear;
@@ -167,7 +167,7 @@ body {
   height: 28px;
   border: 1px solid rgba(40, 40, 70, 0.2);
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border-radius: 6px;
   margin-left: 20px;
   font-family: "Nunito";
@@ -199,7 +199,7 @@ body {
   height: 35px;
   border: 1px solid rgba(40, 40, 70, 0.1);
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border-radius: 8px;
   font-family: "Nunito";
   font-style: normal;
@@ -220,7 +220,7 @@ body {
   height: 35px;
   border: 1px solid rgba(40, 40, 70, 0.1);
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border-radius: 8px;
   font-family: "Nunito";
   font-style: normal;
@@ -262,7 +262,7 @@ body {
   color: #29a19c;
   border: 1px solid #29a19c;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border-radius: 8px;
   padding: 10px 25px;
   position: absolute;
@@ -293,8 +293,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
 }
 
 .mainUnit .modalNextClass {
@@ -314,7 +314,7 @@ body {
   text-align: -webkit-center;
   background: #ffffff;
   -webkit-box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
-          box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+  box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
   border-radius: 10px;
   margin-bottom: 30px;
   -webkit-transition: 2s linear;
@@ -326,8 +326,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   max-width: 529px;
   width: 100%;
   height: 25px;
@@ -349,10 +349,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 28px;
 }
 
@@ -361,8 +361,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   width: 6px;
   height: 6px;
   background-color: #282846;
@@ -374,8 +374,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   max-width: 529px;
   width: 100%;
   height: 126px;
@@ -394,7 +394,7 @@ body {
 .mainUnit .tasks .successes .taskBoard .taskBoard_1 .rangeOfTasks {
   border: 1px solid #29a19c;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   border-radius: 200px;
   background: #ffffff;
   width: 100px;
@@ -422,7 +422,7 @@ body {
   text-align: -webkit-center;
   background: #ffffff;
   -webkit-box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
-          box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+  box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
   border-radius: 10px;
 }
 
@@ -431,8 +431,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   max-width: 529px;
   width: 100%;
   height: 25px;
@@ -454,10 +454,10 @@ body {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   width: 28px;
 }
 
@@ -466,8 +466,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   width: 6px;
   height: 6px;
   background-color: #282846;
@@ -479,8 +479,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   max-width: 526px;
   width: 100%;
   height: 50px;
@@ -496,8 +496,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   margin-left: 15px;
 }
 
@@ -523,11 +523,11 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   max-width: 46px;
   width: 100%;
   margin-right: 15px;
@@ -553,15 +553,15 @@ body {
   transition: 2s linear;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   background: #ffffff;
   width: 473px;
   -webkit-box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
-          box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+  box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
   border-radius: 10px;
   height: 143px;
 }
@@ -581,8 +581,8 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   width: 425px;
   height: 58px;
 }
@@ -616,13 +616,13 @@ body {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin-top: 30px;
   background: #ffffff;
   width: 473px;
   -webkit-box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
-          box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+  box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
   border-radius: 10px;
   width: 472px;
   height: 133px;
@@ -676,4 +676,50 @@ body {
 .removNone {
   display: block;
 }
+#modalWindows {
+  display: none;
+  position: absolute;
+  left: 50%;
+  margin-left: -125px;
+  top: 50%;
+  margin-top: -55px;
+  z-index: 6;
+  width: 250px;
+  height: 110px;
+  background: #ffffff;
+  text-align: center;
+  box-shadow: 0px 10px 25px rgba(29, 52, 54, 0.08);
+  border-radius: 10px;
+  transition: 2s linear;
+  border: 1px solid white;
+}
+
+#modalWindows .modalWindowsP {
+  font-family: Nunito;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+  color: #29a19c;
+}
+
+#modalWindows .modalWindowsButton {
+  display: flex;
+  justify-content: space-evenly;
+}
+#modalWindows .modalWindowsButton .modalWindowsButton1 {
+  border-radius: 8px;
+  width: 50px;
+
+  background-color: #29a19c;
+  font-family: Nunito;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 22px;
+  color: #fafafa;
+  cursor: pointer;
+  border: none;
+}
+
 /*# sourceMappingURL=mainPage.css.map */
