--- a/css/mainPage.css
+++ b/css/mainPage.css
@@ -682,4 +682,53 @@ body {
   width: 100px;
   margin-left: 10px;
 }
+
+#modalWindows {
+  display: none;
+  width: 200px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -100px;
+  margin-top: -50px;
+  height: 100px;
+  text-align: center;
+  background: #ffffff;
+  border: 1px solid white;
+  -webkit-box-shadow: 0px 10px 25px #1d343614;
+          box-shadow: 0px 10px 25px #1d343614;
+  border-radius: 10px;
+  z-index: 7;
+  -webkit-transition: 2s linear;
+  transition: 2s linear;
+}
+
+#modalWindows .modalWindowsP {
+  font-family: Nunito;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 25px;
+  color: #29a19c;
+}
+
+#modalWindows .modalWindowsButton {
+  width: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin: 0 auto;
+}
+
+#modalWindows .modalWindowsButton .modalWindowsButton1 {
+  border-radius: 8px;
+  border: none;
+  background-color: #29a19c;
+  cursor: pointer;
+  height: 25px;
+  width: 37px;
+}
 /*# sourceMappingURL=mainPage.css.map */
