--- a/css/mainPage.scss
+++ b/css/mainPage.scss
@@ -518,3 +518,44 @@ body {
     width: 100px;
     margin-left: 10px;
 }
+#modalWindows {
+    display: none;
+    width: 200px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -100px;
+    margin-top: -50px;
+    height: 100px;
+    text-align: center;
+    background: #ffffff;
+    border: 1px solid white;
+    box-shadow: 0px 10px 25px #1d343614;
+    border-radius: 10px;
+    z-index: 7;
+    transition: 2s linear;
+
+    .modalWindowsP {
+        font-family: Nunito;
+        font-style: normal;
+        font-weight: 600;
+        font-size: 18px;
+        line-height: 25px;
+        color: #29a19c;
+    }
+    .modalWindowsButton {
+        width: 100px;
+        display: flex;
+        justify-content: space-evenly;
+        margin: 0 auto;
+
+        .modalWindowsButton1 {
+            border-radius: 8px;
+            border: none;
+            background-color: #29a19c;
+            cursor: pointer;
+            height: 25px;
+            width: 37px;
+        }
+    }
+}
